--- a/next.html
+++ b/next.html
@@ -84,8 +84,102 @@
          </div>  
         </div>
       </section>
-      <section></section>
-      <section></section>
+      <section class="screen-2">
+         <div class="flex container">
+            <div class="custom-image-wrapper">
+              <div class="custom-image-wrapper__main-image circle-image"></div>
+              <div class="custom-image-wrapper__secondary-image circle-image circle-image--small"></div>
+            </div>
+            <div class="screen-2-text">
+               <div class="screen-2-text__title title-h3 screen-2-text__title_yellow">
+                  <h3>Тут большие добрые сердца помогают жить маленьким сердечкам</h3>
+               </div>
+               <div class="screen-2-text__subtitle">
+                  <p>Ежедневно в пункт временного содержания, путём отлова, попадают безнадзорные собаки и коты. По закону, у животных находящихся в САХе есть всего лишь несколько дней, чтобы найти прежнего или обрести нового хозяина. В противном случае невостребованных животных ждёт УСЫПЛЕНИЕ! Здесь вы сможете найти своего как потерявшегося, так и нового верного друга! 
+                  </p>
+                  <p>Если нет возможности забрать хвостика, вы можете помочь нам финансово или другой материальной помощью. Еще нам всегда нужны добрые и отзывчивые люди - волонтеры, без вас очень трудно!</p>
+               </div>
+            </div>
+          </div>
+      </section>
+      <section class="help">
+         <div class="help-title">
+            <h3>Как помочь?</h3>
+         </div>
+         <div class="help-buttons-icons flex">
+            <div class="help-button">
+               <button class="help-button__icon button">
+                  <a href="#">
+                     <img src="/image/собака-дом.png" alt="собака рядом с домом">
+                  </a>
+               </button>
+               <p class="help-button__text">
+                  Дать хвостику дом или взять на передержку
+               </p>
+            </div>
+            <div class="help-button">
+               <button class="help-button__icon button">
+                  <a href="#">
+                     <img src="/image/рука-карта.png" alt="рука с банковской картой">
+                  </a>
+               </button>
+               <p class="help-button__text">
+                  Перечислить деньги в фонд помощи
+               </p>
+            </div>
+            <div class="help-button">
+               <button class="help-button__icon button">
+                  <a href="#">
+                     <img src="/image/собака-миска.png" alt="собака с миской">
+                  </a>
+               </button>
+               <p class="help-button__text">
+                  Привезти корм, лекарства или другие вещи
+               </p>
+            </div>
+            <div class="help-button">
+               <button class="help-button__icon button">
+                  <a href="#">
+                     <img src="/image/собака-машина.png" alt="собака с машиной">
+                  </a>
+               </button>
+               <p class="help-button__text">
+                  Доставить животным еду или отвезти в больницу
+               </p>
+            </div>
+            <div class="help-button">
+               <button class="help-button__icon button">
+                  <a href="#">
+                     <img src="/image/ладонь-лапа.png" alt="ладонь с лапой">
+                  </a>
+               </button>
+               <p class="help-button__text">
+                  Выгуливать, кормить, мыть или лечить хвостиков
+               </p>
+            </div>
+         </div>
+         <div class="help-line line">
+            <span><img src="/image/собака-дом.png" alt="собака рядом с домом"></span>
+         </div>
+         <div class="help-overexposure flex">
+            <div class="help-overexposure-block">
+               <h3 class="help-overexposure-block__title">
+                  Дом и любовь для хвостика
+               </h3>
+               <p class="help-overexposure-block__text">
+                  Самая большая помощь - это спасти жизнь животному, забрать домой, или помочь хвостику с поиском дома. У наших подопечных очень мало времени. Рассказывайте друзья и и знакомым о наших хвостиках, возможно кому-то нужен будет именно такой друг.
+               </p>
+            </div>
+            <div class="help-overexposure-block">
+               <h3 class="help-overexposure-block__title">
+                  Передержка
+               </h3>
+               <p class="help-overexposure-block__text">
+                  Когда животных ждет скорое усыпление, очень важно найти ему дом. Но пока дом и новые или старые хозяева разыскиваются, хвостику нужно где-то жить. Вы можете забрать к себе домой животных на время. Волонтеры, в свою очередь, обязательно помогут с поиском нового дома.
+               </p>
+            </div>
+         </div>
+      </section>
       <section></section>
       <section></section>
       <section></section>
