--- a/next.html
+++ b/next.html
@@ -290,7 +290,69 @@
          </div>
       </div>
       </section>
-      <section></section>
+      <section class="financial-support">
+         <div class="financial-support-line line">
+            <span><img src="/image/рука-карта.png" alt="рука с банковской картой"></span>
+         </div>
+         <div class="financial-support__title">
+            <h3>
+               Финансовая поддержка
+            </h3>
+         </div> 
+         <div class="financial-support__subtitle">
+            <p>
+               Такая помощь необходима для оплаты стерилизации, прививок, лечения больных животных, покупка корма и других жизненно необходимых вещей.
+            </p>
+         </div>
+         <div class="financial-support__column flex">
+            <div class="financial-support-text">
+               <div class="financial-support-text__title">
+                  <h3>
+                     Расчетный счет в Банке
+                  </h3>
+               </div>
+              <div class="financial-support-text__description">
+                 <p>
+                  БООЗЖ "СПАСИ ЖИЗНЬ" <br>
+                  УНП: 590375680 <br>
+                  <b>Текущий (расчетный) счет в BYN: </b> <br>
+                  BY13ALFA30152555460010270000 <br>
+                  ЗАО 'Альфа-Банк'<br>
+                  БИК: ALFABY2X
+                 </p>
+              </div> 
+              <div class="outerbutton-yellow financial-support-text__button">
+               <div class="innerbutton-yellow">
+                  <button class="button">
+                     <a href="#"><b>Быстрый платеж</b></a>
+                  </button>
+               </div>
+               </div>
+            </div>
+            <div class="financial-support-text">
+               <div class="financial-support-text__title">
+                  <h3>
+                     Коробочки в городе
+                  </h3>
+               </div>
+              <div class="financial-support-text__description">
+               <p>
+                  Наши коробочки для пожертвований в г. Гродно: <br>
+                  1. Зоомаркет «Зообазар», ул. Комарова, 26а; <br>
+                  2. Учебный корпус ГГАУ, ул. Волковича, 1; <br>
+                  3. Парикмахерская «ПРИМАДОННА», ул. Гоголя, 11; <br>
+                  4. Зоомаркет «Зообазар» ул. Пушкина, 31а; <br>
+                  5. Гипермаркет «Евроопт», ул. Тимирязева, 8; <br>
+                  6. Гипермаркет «Евроопт», ул. Янки Купалы, 82А; <br>
+                  7. Фитнес-центр «АДРЕНАЛИН», ул. Подольная, д.37.
+               </p>
+               <div class="financial-support-text__link">
+                  <a href="#" class="link">Посмотреть на карте</a>
+               </div>
+              </div> 
+            </div>
+         </div>
+      </section>
       <section></section>
       <section></section>
       <section></section>
