--- a/next.html
+++ b/next.html
@@ -158,7 +158,7 @@
                </p>
             </div>
          </div>
-         <div class="help-line line">
+         <div class="help-line line line-block">
             <span><img src="/image/собака-дом.png" alt="собака рядом с домом"></span>
          </div>
          <div class="help-overexposure flex">
@@ -291,7 +291,7 @@
       </div>
       </section>
       <section class="financial-support">
-         <div class="financial-support-line line">
+         <div class="financial-support-line line line-block">
             <span><img src="/image/рука-карта.png" alt="рука с банковской картой"></span>
          </div>
          <div class="financial-support__title">
@@ -353,7 +353,114 @@
             </div>
          </div>
       </section>
-      <section></section>
+      <section class="help-screen">
+         <div class="help-screen-line line line-block">
+            <span><img src="/image/собака-миска.png" alt="собака с миской"></span>
+         </div> 
+         <div class="help-screen-block">
+            <div class="help-screen-block__title help-screen-block-feed">
+               <h3>
+                  Корма
+               </h3>
+            </div>
+            <div class="help-screen-block__text">
+               <p>
+                  Можно помочь с покупкой и доставкой еды для хвостатых:<br>
+                  • Быстроразваривающиеся <b>крупы</b>: дроблёная гречка, овсянка, сечка, овсяные/гречневые хлопья, не
+                  требующие варки;<br>
+                  • <b>Сухие и влажные корма</b> для собак и котов (кроме Рекс и Petboom),<br>
+                  • <b>Фарш для собак</b>, "БОБИКИ" и др.<br>
+                  Вы можете помочь в приготовлении каш и их доставке!
+               </p>
+            </div>
+            <div class="help-screen-block__title help-screen-block-medicine">
+               <h3>
+                  Лекарства
+               </h3>
+            </div>
+            <div class="help-screen-block__text">
+               <p>
+                  Нам необходимы препараты: <b>цефтриаксон</b> (флакон по 0,5 г); <b>новокаин</b> (раствор для
+                  инъекций);
+                  <b>гискан; гамавит; катозал; антитокс фоспренил; энтеросгель</b> (паста); <b>препараты от глистов,
+                     блох,
+                     клещей, для заживления ран</b>.
+               </p>
+            </div>
+            <div class="help-screen-block__title help-screen-block-otherthings">
+               <h3>
+                  Другие нужные вещи
+               </h3>
+            </div>
+            <div class="help-screen-block__text">
+               <p>
+                  Для содержания животных всегда необходимы:<br>
+                  • Ошейники, поводки, намордники;<br>
+                  • Опилки и солома в любом количестве;<br>
+
+                  • Посуда для животных и для приготовления еды - миски, кастрюли, ножи, черпаки и др.;<br>
+                  • Теплые вещи, лежаки для утепления и уюта животных;<br>
+                  • Будки.
+               </p>
+            </div>
+            <div class="help-screen-block__link">
+               <a href="#" class="link">Кому и куда передать?</a>
+            </div>
+         </div>
+         <div class="help-screen-line line line-block">
+            <span><img src="/image/собака-машина.png" alt="собака с ммашиной"></span>
+         </div>
+         <div class="help-screen-block">
+            <div class="help-screen-block__title help-screen-block-carassistance">
+               <h3>
+                  Автопомощь
+               </h3>
+            </div>
+            <div class="help-screen-block__text">
+               <p>
+                  Важной помощью будет транспортировка. Необходимо отвозить животных в ветеринарную клинику в сопровождении нашего волонтера или привозить еду. Если у вас есть автомобиль, немного свободного времени и доброе сердце - будем вам рады.
+               </p>
+            </div>
+            <div class="outerbutton-yellow help-screen-block__button">
+               <div class="innerbutton-yellow">
+                  <button class="button">
+                     <a href="#"><b>Оставить заявку</b></a>
+                  </button>
+               </div>
+               </div>  
+         </div>  
+         <div class="help-screen-line line line-block">
+            <span><img src="/image/ладонь-лапа.png" alt="ладонь с лапкой"></span>
+         </div> 
+        <div class="volunteer flex">
+         <div class="custom-image-wrapper">
+            <div class="custom-image-wrapper__main-image circle-image"></div>
+          </div>  
+          <div class="help-screen-block__volunteering">
+            <div class="help-screen-block__title">
+               <h3>
+                  Волонтерство
+               </h3>
+            </div>
+            <div class="help-screen-block__text">
+               <p>
+                  Катастрофически не хватает добрых людей, которые готовы поделиться своим временем и
+                     окружить заботой животных. Много опыта не нужно, все расскажем и поможем! Если Вы располагаете
+                     несколькими часами свободного времени, проведите его с пользой! Главное условие - это Ваше
+                     совершеннолетие и любовь к животным!<br>
+                     Часто животным не хватает обычных прогулок и игры, они сидят в клетках и грустят.</p>
+               </p>
+            </div>
+            <div class="outerbutton-yellow help-screen-block__button">
+               <div class="innerbutton-yellow">
+                  <button class="button">
+                     <a href="#"><b>Оставить заявку</b></a>
+                  </button>
+               </div>
+               </div>  
+         </div>   
+        </div>   
+      </section>
       <section></section>
       <section></section>
       <section></section>
