--- a/next.html
+++ b/next.html
@@ -461,8 +461,94 @@
          </div>   
         </div>   
       </section>
-      <section></section>
-      <section></section>
+      <section class="news"> 
+         <div class="news__title">
+            <h3>
+               Новости
+            </h3>
+         </div>
+         <div class="news-block flex">
+            <div class="news-block__img">
+               <img src="/image/собака-новости.png" alt="собака на зеленом фоне">
+            </div>
+            <div class="news-block__text">
+               <p>
+                  Срочно необходимо забрать собаку (мальчик) на передержку или насовсем. Послезавтра его ждет усыпление. С кормом и доставкой поможем. В данный момент находится в вольера САХа. <br>
+                  Контактный телефон + 37529 58930557<br>
+                  Спасите жизнь хвостику.
+               </p>
+            </div>
+         </div>
+         <div class="news-block flex">
+            <div class="news-block__img">
+               <img src="/image/щенки-новости.png" alt="щенки">
+            </div>
+            <div class="news-block__text">
+               <p>
+                  Найдены бедомные щенки по улице Горького д.56. <br>
+                  Сегодня будут перевезены в вольеры САХа. Если у вас есть возможность взять на передержку или пристроить малышей - будем вам очень благодарны.
+               </p>
+            </div>
+         </div>
+         <details>
+            <summary></summary>
+            <div class="news-block flex">
+               <div class="news-block__img">
+                  <img src="/image/щенки-новости.png" alt="щенки">
+               </div>
+               <div class="news-block__text">
+                  <p>
+                     Найдены бедомные щенки по улице Горького д.56.<br>
+                     Сегодня будут перевезены в вольеры САХа. Если у вас есть возможность взять на передержку или пристроить малышей - будем вам очень благодарны.
+                  </p>
+               </div>
+            </div>
+            <div class="news-block flex">
+               <div class="news-block__img">
+                  <img src="/image/щенки-новости.png" alt="щенки">
+               </div>
+               <div class="news-block__text">
+                  <p>
+                     Найдены бедомные щенки по улице Горького д.56.<br>
+                     Сегодня будут перевезены в вольеры САХа. Если у вас есть возможность взять на передержку или
+                     пристроить
+                     малышей - будем вам очень благодарны.Найдены бедомные щенки по улице Горького д.56.<br>
+                     Сегодня будут перевезены в вольеры САХа. Если у вас есть возможность взять на передержку или
+                     пристроить
+                     малышей - будем вам очень благодарны.Найдены бедомные щенки по улице Горького д.56.<br>
+                     Сегодня будут перевезены в вольеры САХа. Если у вас есть возможность взять на передержку или
+                     пристроить
+                     малышей - будем вам очень благодарны.
+                  </p>
+               </div>
+            </div>
+            <div class="news-block flex">
+               <div class="news-block__img">
+                  <img src="/image/щенки-новости.png" alt="щенки">
+               </div>
+               <div class="news-block__text">
+                  <p>
+                     Найдены бедомные щенки по улице Горького д.56. <br>
+                     Сегодня будут перевезены в вольеры САХа. Если у вас есть возможность взять на передержку или пристроить малышей - будем вам очень благодарны.
+                  </p>
+               </div>
+            </div>
+            <div class="news-block flex">
+               <div class="news-block__img">
+                  <img src="/image/щенки-новости.png" alt="щенки">
+               </div>
+               <div class="news-block__text">
+                  <p>
+                     Найдены бедомные щенки по улице Горького д.56. <br>
+                     Сегодня будут перевезены в вольеры САХа. Если у вас есть возможность взять на передержку или пристроить малышей - будем вам очень благодарны.
+                  </p>
+               </div>
+            </div>
+         </details>
+      </section>
+      <section>
+         
+      </section>
       <section></section>
    </main>
    <footer></footer>
