--- a/next.html
+++ b/next.html
@@ -600,8 +600,38 @@
              
           </div> 
       </section>
-      <section></section>
+      <section class="thanks">
+         <div class="thanks__text">
+            <p>
+               Спасибо за помощь
+            </p>
+         </div>
+         <div class="thanks__image">
+            
+         </div>
+         <div class="thanks__rectangle">
+         </div>
+      </section>
    </main>
-   <footer></footer>
+   <footer>
+      <div class="link-footer flex">
+      <div class="link-footer__first flex">
+         <a href="">Дом или передержка</a>
+         <a href="">Финансовая поддержка</a>
+         <a href="">Корма, лекарства и другие вещи</a>
+         <a href="">Автопомощь</a>
+         <a href="">Волонтерство</a>
+      </div>
+      <div class="link-footer__second flex">
+         <a href="">О нас</a>
+         <a href="">Контакты</a>
+      </div>
+    </div>  
+    <div class="footer-text">
+       <p>
+         © 2020 БООЗЖ "СПАСИ ЖИЗНЬ"
+       </p>
+    </div>
+   </footer>
 </body>
 </html>
