сделан index и animals

--- a/next.html
+++ b/next.html
@@ -33,10 +33,10 @@
          </label>
 
          <ul class="menu__box flex">
-           <li><a href="#" class="menu__link">Как помочь</a></li> 
-           <li><a href="#" class="menu__link">Подопечные животные</a></li>
-           <li><a href="#" class="menu__link">О нас</a></li>
-           <li><a href="#" class="menu__link">Контакты</a></li> 
+           <li><a href="#help" class="menu__link">Как помочь</a></li> 
+           <li><a href="/animals.html" class="menu__link">Подопечные животные</a></li>
+           <li><a href="#about-u" class="menu__link">О нас</a></li>
+           <li><a href="#contact" class="menu__link">Контакты</a></li> 
          </ul>
             
          <div class="flex button-logo-menu">
@@ -78,7 +78,7 @@
          <div class="outerbutton-yellow main-header__button">
                <div class="innerbutton-yellow">
                   <button class="button">
-                     <a href="#"><b>Хочу помочь</b></a>
+                     <a href="#help"><b>Хочу помочь</b></a>
                   </button>
                </div>
          </div>  
@@ -102,14 +102,14 @@
             </div>
           </div>
       </section>
-      <section class="help">
+      <section class="help" id="help">
          <div class="help-title">
             <h3>Как помочь?</h3>
          </div>
          <div class="help-buttons-icons flex">
             <div class="help-button">
                <button class="help-button__icon button">
-                  <a href="#">
+                  <a href="#overexposure">
                      <img src="/image/собака-дом.png" alt="собака рядом с домом">
                   </a>
                </button>
@@ -119,7 +119,7 @@
             </div>
             <div class="help-button">
                <button class="help-button__icon button">
-                  <a href="#">
+                  <a href="#financial-support">
                      <img src="/image/рука-карта.png" alt="рука с банковской картой">
                   </a>
                </button>
@@ -129,7 +129,7 @@
             </div>
             <div class="help-button">
                <button class="help-button__icon button">
-                  <a href="#">
+                  <a href="#help-screen">
                      <img src="/image/собака-миска.png" alt="собака с миской">
                   </a>
                </button>
@@ -139,7 +139,7 @@
             </div>
             <div class="help-button">
                <button class="help-button__icon button">
-                  <a href="#">
+                  <a href="#carassistance">
                      <img src="/image/собака-машина.png" alt="собака с машиной">
                   </a>
                </button>
@@ -149,7 +149,7 @@
             </div>
             <div class="help-button">
                <button class="help-button__icon button">
-                  <a href="#">
+                  <a href="#volunteer">
                      <img src="/image/ладонь-лапа.png" alt="ладонь с лапой">
                   </a>
                </button>
@@ -161,7 +161,7 @@
          <div class="help-line line line-block">
             <span><img src="/image/собака-дом.png" alt="собака рядом с домом"></span>
          </div>
-         <div class="help-overexposure flex">
+         <div class="help-overexposure flex" id="overexposure">
             <div class="help-overexposure-block">
                <h3 class="help-overexposure-block__title">
                   Дом и любовь для хвостика
@@ -185,7 +185,7 @@
             <h3>Наши подопечные</h3>
          </div>
          <div class="animals-link">
-            <a href="#" class="link">Посмотреть всех (157)</a>
+            <a href="/animals.html" class="link">Посмотреть всех (157)</a>
             <img src="/image/icon.png" alt="стрелочка">
          </div>
          <div class="animals-cards">
@@ -290,7 +290,7 @@
          </div>
       </div>
       </section>
-      <section class="financial-support">
+      <section class="financial-support" id="financial-support">
          <div class="financial-support-line line line-block">
             <span><img src="/image/рука-карта.png" alt="рука с банковской картой"></span>
          </div>
@@ -324,7 +324,7 @@
               <div class="outerbutton-yellow financial-support-text__button">
                <div class="innerbutton-yellow">
                   <button class="button">
-                     <a href="#"><b>Быстрый платеж</b></a>
+                     <a href="https://express-pay.by/" target="_blank"><b>Быстрый платеж</b></a>
                   </button>
                </div>
                </div>
@@ -353,7 +353,7 @@
             </div>
          </div>
       </section>
-      <section class="help-screen">
+      <section class="help-screen" id="help-screen">
          <div class="help-screen-line line line-block">
             <span><img src="/image/собака-миска.png" alt="собака с миской"></span>
          </div> 
@@ -410,7 +410,7 @@
          <div class="help-screen-line line line-block">
             <span><img src="/image/собака-машина.png" alt="собака с ммашиной"></span>
          </div>
-         <div class="help-screen-block">
+         <div class="help-screen-block" id="carassistance">
             <div class="help-screen-block__title help-screen-block-carassistance">
                <h3>
                   Автопомощь
@@ -432,7 +432,7 @@
          <div class="help-screen-line line line-block">
             <span><img src="/image/ладонь-лапа.png" alt="ладонь с лапкой"></span>
          </div> 
-        <div class="volunteer flex">
+        <div class="volunteer flex" id="volunteer">
          <div class="custom-image-wrapper">
             <div class="custom-image-wrapper__main-image circle-image"></div>
           </div>  
@@ -546,7 +546,7 @@
             </div>
          </details>
       </section>
-      <section class="about-u">
+      <section class="about-u" id="about-u">
             <div class="about-u__title">
                <h3>
                   О нас
@@ -557,7 +557,7 @@
                   <b>Мы - благотворительное общественное объединение защиты животных «СПАСИ ЖИЗНЬ». Цель нашей деятельности: помощь бездомным животным, оказавшимся в Пункте отлова и временного содержания безнадзорных животных г.Гродно.</b>
                </p>
             </div>
-          <div class="about-u-contacts">
+          <div class="about-u-contacts" id="contact">
              <div class="about-u-contacts__title">
                 <p>
                   Контакты
@@ -616,15 +616,15 @@
    <footer>
       <div class="link-footer flex">
       <div class="link-footer__first flex">
-         <a href="">Дом или передержка</a>
-         <a href="">Финансовая поддержка</a>
-         <a href="">Корма, лекарства и другие вещи</a>
-         <a href="">Автопомощь</a>
-         <a href="">Волонтерство</a>
+         <a href="#overexposure">Дом или передержка</a>
+         <a href="#financial-support">Финансовая поддержка</a>
+         <a href="#help-screen">Корма, лекарства и другие вещи</a>
+         <a href="#carassistance">Автопомощь</a>
+         <a href="#volunteer">Волонтерство</a>
       </div>
       <div class="link-footer__second flex">
-         <a href="">О нас</a>
-         <a href="">Контакты</a>
+         <a href="#about-u">О нас</a>
+         <a href="#contact">Контакты</a>
       </div>
     </div>  
     <div class="footer-text">
