переходы по кнопкам

--- a/animals-next.html
+++ b/animals-next.html
@@ -444,15 +444,15 @@
    <footer>
       <div class="link-footer flex">
          <div class="link-footer__first flex">
-            <a href="#overexposure">Дом или передержка</a>
-            <a href="#financial-support">Финансовая поддержка</a>
-            <a href="#help-screen">Корма, лекарства и другие вещи</a>
-            <a href="#carassistance">Автопомощь</a>
-            <a href="#volunteer">Волонтерство</a>
+            <a href="/next.html#overexposure">Дом или передержка</a>
+            <a href="/next.html#financial-support">Финансовая поддержка</a>
+            <a href="/next.html#help-screen">Корма, лекарства и другие вещи</a>
+            <a href="/next.html#carassistance">Автопомощь</a>
+            <a href="/next.html#volunteer">Волонтерство</a>
          </div>
          <div class="link-footer__second flex">
-            <a href="#about-u">О нас</a>
-            <a href="#contact">Контакты</a>
+            <a href="/next.html#about-u">О нас</a>
+            <a href="/next.html#contact">Контакты</a>
          </div>
        </div>  
        <div class="footer-text">
