анимация первого блока

--- a/next.html
+++ b/next.html
@@ -72,7 +72,7 @@
            <div class="main-header__target">
               <p>Наша цель: помощь бездомным животным. Также мы поддерживаем хвостиков, которые оказались в пункте отлова и временного содержания в Гродно. </p>
            </div>
-           <div class="main-header__yelllow">
+           <div class="main-header__yellow">
               <p>У животных, находящихся в пункте отлова и временного содержания бродячих животных, есть всего несколько дней до усыпления...</p>
            </div>
          <div class="outerbutton-yellow main-header__button">
