--- a/animals.html
+++ b/animals.html
@@ -5,7 +5,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0 user-scalable=1.0">
    <link rel="stylesheet" href="fonts.css">
-   <link rel="stylesheet" href="style-animals.css">
+   <link rel="stylesheet" href="css/animals.css">
    <title>Наши подопечные</title>
 </head>
 <body>
@@ -13,13 +13,13 @@
    <header class="flex">
       <div class="button-back flex">
          <div class="button-back__image">
-            <a href="/next.html">
-              <img src="/image/button-back.png" alt="желтая кнопка назад"> 
+            <a href="index.html">
+              <img src="image/button-back.png" alt="желтая кнопка назад"> 
             </a>  
          </div>
          <div class="button-back__text">
             <p>
-              <a href="/index.html">
+              <a href="index.html">
                  Вернуться назад
               </a> 
             </p>
@@ -45,7 +45,7 @@
       <article class="grid">
          <div class="grid-wrap">
             <figure class="animals-cards__image">
-               <img src="/image/animals/моник-собака.png" alt="Моник">
+               <img src="image/animals/моник-собака.png" alt="Моник">
                <figcaption class="animals-card-text">
                   <div class="animals-card-text__title">
                      <h4><b>Моник</b></h4>
@@ -81,7 +81,7 @@
          </div>
          <div class="grid-wrap">
             <figure class="animals-cards__image">
-               <img src="/image/animals/Лунатик.png" alt="Лунатик">
+               <img src="image/animals/Лунатик.png" alt="Лунатик">
                <figcaption class="animals-card-text">
                   <div class="animals-card-text__title">
                      <h4><b>Лунатик</b></h4>
@@ -117,7 +117,7 @@
          </div>   
          <div class="grid-wrap">
             <figure class="animals-cards__image">
-               <img src="/image/animals/герда.png" alt="Герда">
+               <img src="image/animals/герда.png" alt="Герда">
                <figcaption class="animals-card-text">
                   <div class="animals-card-text__title">
                      <h4><b>Герда</b></h4>
@@ -153,7 +153,7 @@
           </div>  
          <div class="grid-wrap">
             <figure class="animals-cards__image">
-               <img src="/image/animals/саки.png" alt="Саки">
+               <img src="image/animals/саки.png" alt="Саки">
                <figcaption class="animals-card-text">
                   <div class="animals-card-text__title">
                      <h4><b>Саки</b></h4>
@@ -189,7 +189,7 @@
          </div>   
          <div class="grid-wrap">
             <figure class="animals-cards__image">
-               <img src="/image/animals/моник-собака.png" alt="Моник">
+               <img src="image/animals/моник-собака.png" alt="Моник">
                <figcaption class="animals-card-text">
                   <div class="animals-card-text__title">
                      <h4><b>Моник</b></h4>
@@ -225,7 +225,7 @@
          </div>   
          <div class="grid-wrap">
             <figure class="animals-cards__image">
-               <img src="/image/animals/андреантино.png" alt="Андреантино">
+               <img src="image/animals/андреантино.png" alt="Андреантино">
                <figcaption class="animals-card-text">
                   <div class="animals-card-text__title">
                      <h4><b>Андреантино</b></h4>
@@ -261,7 +261,7 @@
          </div>   
          <div class="grid-wrap">
             <figure class="animals-cards__image">
-               <img src="/image/animals/Пупсик.png" alt="Пупсик">
+               <img src="image/animals/Пупсик.png" alt="Пупсик">
                <figcaption class="animals-card-text">
                   <div class="animals-card-text__title">
                      <h4><b>Пупсик</b></h4>
@@ -297,7 +297,7 @@
          </div>   
          <div class="grid-wrap">
             <figure class="animals-cards__image">
-               <img src="/image/animals/мишка.png" alt="Мишка">
+               <img src="image/animals/мишка.png" alt="Мишка">
                <figcaption class="animals-card-text">
                   <div class="animals-card-text__title">
                      <h4><b>Мишка</b></h4>
@@ -333,7 +333,7 @@
           </div>  
          <div class="grid-wrap">
             <figure class="animals-cards__image">
-               <img src="/image/animals/красавчик.png" alt="Красавчик">
+               <img src="image/animals/красавчик.png" alt="Красавчик">
                <figcaption class="animals-card-text">
                   <div class="animals-card-text__title">
                      <h4><b>Красавчик</b></h4>
@@ -369,7 +369,7 @@
          </div>   
          <div class="grid-wrap">
             <figure class="animals-cards__image">
-               <img src="/image/animals/Бобик.png" alt="Бобик">
+               <img src="image/animals/Бобик.png" alt="Бобик">
                <figcaption class="animals-card-text">
                   <div class="animals-card-text__title">
                      <h4><b>Бобик</b></h4>
@@ -405,7 +405,7 @@
          </div>   
          <div class="grid-wrap">   
             <figure class="animals-cards__image">
-               <img src="/image/animals/милаха.png" alt="Милаха">
+               <img src="image/animals/милаха.png" alt="Милаха">
                <figcaption class="animals-card-text">
                   <div class="animals-card-text__title">
                      <h4><b>Милаха</b></h4>
@@ -444,15 +444,15 @@
    <footer>
       <div class="link-footer flex">
          <div class="link-footer__first flex">
-            <a href="/index.html#overexposure">Дом или передержка</a>
-            <a href="/index.html#financial-support">Финансовая поддержка</a>
-            <a href="/index.html#help-screen">Корма, лекарства и другие вещи</a>
-            <a href="/index.html#carassistance">Автопомощь</a>
-            <a href="/index.html#volunteer">Волонтерство</a>
+            <a href="index.html#overexposure">Дом или передержка</a>
+            <a href="index.html#financial-support">Финансовая поддержка</a>
+            <a href="index.html#help-screen">Корма, лекарства и другие вещи</a>
+            <a href="index.html#carassistance">Автопомощь</a>
+            <a href="index.html#volunteer">Волонтерство</a>
          </div>
          <div class="link-footer__second flex">
-            <a href="/index.html#about-u">О нас</a>
-            <a href="/index.html#contact">Контакты</a>
+            <a href="index.html#about-u">О нас</a>
+            <a href="index.html#contact">Контакты</a>
          </div>
        </div>  
        <div class="footer-text">
